<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="53dp"
    android:background="@drawable/header_bg"
    android:minHeight="?attr/actionBarSize"
    android:contentInsetLeft="0dp"
    android:contentInsetStart="0dp"
    app:contentInsetLeft="0dp"
    app:contentInsetStart="0dp"
    android:contentInsetRight="0dp"
    android:contentInsetEnd="0dp"
    app:contentInsetRight="0dp"
    app:contentInsetEnd="0dp"
    android:titleTextColor="#ffffff">
        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center"
            android:text="@string/cancel_cap"
            android:paddingLeft="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:layout_marginLeft="5dp"
            android:textSize="@dimen/_13sdp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/create_ac_head"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            />

        <TextView
            android:id="@+id/txt_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right|center"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/save"
            android:textSize="@dimen/_13sdp"
            android:textColor="#FFFFFF" />

    </android.support.v7.widget.Toolbar>

