<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mightyaudio.activity.MightyGuide1"
    android:background="@drawable/bg_plane">
    <include layout="@layout/actionbar_header"/>

    <LinearLayout
        android:id="@+id/need_mighty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_need"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_27sdp"
        android:text="@string/text_head_need_mighty"/>


    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="bottom|center_vertical|center_horizontal|clip_horizontal"
        android:layout_marginLeft="25dp"
        android:src="@drawable/img_i_need_to"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mighty_img"
        android:id="@+id/imageView4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_vertical">

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:id="@+id/btn_need"
            android:background="@drawable/btn_selector"
            android:text="@string/need_one"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/btn_got"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/btn_selector"
            android:text="@string/got_one"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>