<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context="mightyaudio.activity.MightyLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableLeft="@drawable/facebook_icon"
            android:drawablePadding="3dp"/>
        
        <TextView
            android:id="@+id/text_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="OR"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/text_header_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="Username"/>

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:paddingLeft="5dp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:inputType="textPersonName"
            android:maxLength="35"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/txt_password_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="Password"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_userpass"
            android:hint="@string/password"
            android:paddingLeft="5dp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:maxLines="1"
            android:maxLength="35"/>

        <CheckBox
            android:id="@+id/chech_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="Show Password"
            android:buttonTint="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_selector"
            android:textSize="@dimen/_18sdp"
            android:textColor="@color/setup_btn_color"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/text_invalid_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/auto_fill"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="Invalid Username or Password"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/forgot_password"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/text_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/create_account"
            />

        <TextView
            android:id="@+id/text_mighty_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mighty_setup"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

</ScrollView>